# openfabric-ai-software-engineer

./: Dockerfile  chat.py  main.py  pyproject.toml  start.sh
datastore/: state.json
training/: Untitled0.ipynb  download_a_finetuned_model.ipynb  train.py
